<resources>
    <string name="app_name">Lesson09_Homework</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="homework01">第一题</string>
    <string name="homework02">第二题</string>
    <string name="homework03">第三题</string>
    <string name="homework01_edt_name">请输入姓名</string>
    <string name="homework01_edt_score">请输入成绩</string>
    <string name="homework01_edt_age">请输入年龄</string>
    <string name="homework01_btn_insert">添加</string>
    <string name="homework01_btn_delete">删除</string>
    <string name="homework02_btn_query">查询</string>
</resources>
