<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_name_homework01"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/homework01_edt_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_age_homework01"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        android:hint="@string/homework01_edt_age" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_score_homework01"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        android:hint="@string/homework01_edt_score" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework01_btn_insert"
            android:id="@+id/btn_insert_homework01"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework01_btn_delete"
            android:id="@+id/btn_delete_homework01"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_homework01" />
</LinearLayout>